--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="chatpan1">
         <video id=vidwindow1 width="1280" height="720" autoplay muted="muted">
-            <source src="https://upload.wikimedia.org/wikipedia/commons/transcoded/8/88/Big_Buck_Bunny_alt.webm/Big_Buck_Bunny_alt.webm.360p.vp9.webm" type='video/webm_s; swdecoder=true;'>
+            <source src="car_20130125_18.mp4" type='video/mp4; pip=true;'>
             Your browser does not support the video tag.
         </video>
     </div>
