--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="chatpan1">
-        <video id=vidwindow1 width="1280" height="720" autoplay muted="muted">
+        <video id=vidwindow1 width="1280" height="720" controls loop>
             <source src="car_20130125_18.mp4" type='video/mp4; pip=true;'>
             Your browser does not support the video tag.
         </video>
