--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Multi Video Window Chat</title>
-    <link rel="stylesheet" href="css/main.css" />
-  </head>
-  <body>
-    <div id="chatpan1">
-        <video id=vidwindow1 width="1280" height="720" controls loop>
-            <source src="car_20130125_18.mp4" type='video/mp4; pip=true;'>
-            Your browser does not support the video tag.
-        </video>
-    </div>
-    <script>
-        window.onload = function() {
-        document.getElementById("vidwindow1").play();
-    }
-    </script>
-  </body>
+<body>
+<div id="chatpan2">
+<video width="320" height="240" autoplay muted="muted">
+  <source src="car_20130125_18.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+</div>
+</body>
 </html>
-
