--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <div id="chatpan2">
-<video width="320" height="240" autoplay muted="muted">
+<video width="320" height="240" control autoplay muted="muted">
   <source src="car_20130125_18.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
