--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <div id="backgroundvideo"></div>
     <div id="chatpan1">
-        <video id=vidwindow1 src="https://upload.wikimedia.org/wikipedia/commons/transcoded/8/88/Big_Buck_Bunny_alt.webm/Big_Buck_Bunny_alt.webm.360p.vp9.webm" width="320" height="180">
+        <video id=vidwindow1 src="bigBunney.mp4" width="320" height="180">
             <!--<source id=videosource1 src="https://upload.wikimedia.org/wikipedia/commons/transcoded/8/88/Big_Buck_Bunny_alt.webm/Big_Buck_Bunny_alt.webm.360p.vp9.webm" type="video/webm"> -->
             Your browser does not support the video tag.
         </video>
-        <video id=vidwindow2 src="https://upload.wikimedia.org/wikipedia/commons/transcoded/a/a2/Elephants_Dream_%282006%29.webm/Elephants_Dream_%282006%29.webm.360p.vp9.webm" width="320" height="180">
+        <video id=vidwindow2 src="Video-1080p.mp4" width="320" height="180">
             <!--<source id=videosource2 src="https://upload.wikimedia.org/wikipedia/commons/transcoded/a/a2/Elephants_Dream_%282006%29.webm/Elephants_Dream_%282006%29.webm.360p.vp9.webm" type="video/webm"> -->
             Your browser does not support the video tag.
         </video>
@@ -29,6 +29,17 @@
         <button id="BBBButton" style="font-size:20px" onclick="HandleOnClick(this);">BigBugBunny</button>
         <button id="EDButton" style="font-size:20px" onclick="HandleOnClick(this);">ElephantDream</button>
         <button id="GDButton" style="font-size:20px" onclick="HandleOnClick(this);">GlazingDoughnuts</button>
+    </div>
+    <div id="selectionpan2">
+        <label for="position" style="font-size:24px">Position:</label>
+        <button id="TopButton" style="font-size:20px" onclick="HandleOnClick(this);">Top</button>
+        <button id="MidButton" style="font-size:20px" onclick="HandleOnClick(this);">Middle</button>
+        <button id="BottomButton" style="font-size:20px" onclick="HandleOnClick(this);">Bottom</button>
+    </div>
+    <div id="selectionpan3">
+        <label for="widthheight" style="font-size:24px">Width(Auto Adjust Height):</label>
+        <button id="320Button" style="font-size:20px" onclick="HandleOnClick(this);">320</button>
+        <button id="160Button" style="font-size:20px" onclick="HandleOnClick(this);">160</button>        
     </div>
   </body>
 </html>
